# speex

./: CMakeLists.txt  config.h.cmake  configure.ac
include/: CMakeLists.txt
libspeex/: CMakeLists.txt  Makefile.am  arch.h  fixed_arm5e.h  libspeex.def  libspeexdsp.def  ltp.c  ltp_arm4.h  resample.c  resample_neon.c  resample_neon.h  vq.c
